💬 added private counts

--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
       <div class="section section-1">
         <a href="https://github.com/anuraghazra/github-readme-stats" target="_blank">
           <img alt="Github Stats" width="80%"
-            src="https://github-readme-stats.vercel.app/api/?username=Newtox&layout=compact&hide_rank=false&include_all_commits=true&show_icons=true&hide_border=true&title_color=faa627&bg_color=36393f&text_color=ffffffcc&icon_color=ffffff&custom_title=GitHub Stats">
+            src="https://github-readme-stats.vercel.app/api/?username=Newtox&layout=compact&hide_rank=false&count_private=true&include_all_commits=true&show_icons=true&hide_border=true&title_color=faa627&bg_color=36393f&text_color=ffffffcc&icon_color=ffffff&custom_title=GitHub Stats">
         </a>
         <p style="text-align: center;">
           The following graphic is a chart
