--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta property="og:url" content="https://newtox.github.io">
   <meta property="og:title" content="Newtox">
   <meta property="og:description" content="Newtox"s Homepage.">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="./css/main.css">
   <title>Welcome To My Website</title>
 </head>
 
@@ -27,22 +27,22 @@
       </div>
       <ul class="menu-nav">
         <li class="nav-item current">
-          <a href="index.html" class="nav-link">
+          <a href="./index.html" class="nav-link">
             Home
           </a>
         </li>
         <li class="nav-item">
-          <a href="about.html" class="nav-link">
+          <a href="./about.html" class="nav-link">
             About
           </a>
         </li>
         <li class="nav-item">
-          <a href="contact.html" class="nav-link">
+          <a href="./contact.html" class="nav-link">
             Contact
           </a>
         </li>
         <li class="nav-item">
-          <a href="socials.html" class="nav-link">
+          <a href="./socials.html" class="nav-link">
             Socials
           </a>
         </li>
