--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="./css/main.css">
   <title>About Me</title>
 </head>
 
@@ -23,22 +23,22 @@
       </div>
       <ul class="menu-nav">
         <li class="nav-item">
-          <a href="index.html" class="nav-link">
+          <a href="./index.html" class="nav-link">
             Home
           </a>
         </li>
         <li class="nav-item current">
-          <a href="about.html" class="nav-link">
+          <a href="./about.html" class="nav-link">
             About
           </a>
         </li>
         <li class="nav-item">
-          <a href="contact.html" class="nav-link">
+          <a href="./contact.html" class="nav-link">
             Contact
           </a>
         </li>
         <li class="nav-item">
-          <a href="socials.html" class="nav-link">
+          <a href="./socials.html" class="nav-link">
             Socials
           </a>
         </li>
