--- a/about.html
+++ b/about.html
@@ -65,6 +65,10 @@
           My name is Justin, I am also known as Newtox.
           <br>
           I am 17 years old and from Germany.
+          <br>
+          I really enjoy playing video games and programming.
+          <br>
+          My current favorite game is Titanfall 2.
         </p>
       </div>
 
