--- a/about.html
+++ b/about.html
@@ -66,9 +66,9 @@
           <br>
           I am 17 years old and from Germany.
           <br>
-          I really enjoy playing video games and programming.
+          I really enjoy playing video games, watching anime and programming.
           <br>
-          My current favorite game is Titanfall 2.
+          My current favorite game is Knockout City.
         </p>
       </div>
 
