🔥 removed email field

--- a/contact.html
+++ b/contact.html
@@ -55,9 +55,9 @@
       Here you can see options on where you can contact me :o
     </h2>
     <div class="boxes">
-      <div onclick="window.open('mailto:futzy261@gmail.com')">
+      <!-- <div onclick="window.open('mailto:futzy261@gmail.com')">
         <span class="text-secondary">Email: </span> futzy261@gmail.com
-      </div>
+      </div> -->
       <div onclick="window.open('http://discord.com/users/402483602094555138')">
         <span class="text-secondary">Discord: </span> Newtox#3261
       </div>
