--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 
     <nav class="menu">
       <div class="menu-branding">
-        <div class="portrait"></div>
+        <div class="avatar"></div>
       </div>
       <ul class="menu-nav">
         <li class="nav-item">
@@ -55,16 +55,16 @@
       Let me introduce myself :D
     </h2>
     <div class="about-info">
-      <img src="img/portrait.jpg" alt="Justin Lyschik" class="bio-image">
+      <img src="img/avatar.png" alt="Justin Lyschik" class="bio-image">
 
       <div class="bio">
-        <h3 class="text-secondary">BIO</h3>
+        <h3 class="text-secondary">DESCRIPTION</h3>
         <p>
           Hello there!
           <br>
-          My name is Justin, I am also known as Newtox.
+          My name is Justin, I am 17 years old.
           <br>
-          I am 17 years old and from Germany.
+          I'm currently living in Germany.
           <br>
           I really enjoy playing video games, watching anime and programming.
           <br>
@@ -74,24 +74,26 @@
 
       <div class="section section-1">
         <a href="https://github.com/anuraghazra/github-readme-stats" target="_blank">
-          <img alt="Github Stats" width="80%"
-            src="https://github-readme-stats.vercel.app/api/?username=Newtox&layout=compact&hide_rank=false&count_private=true&include_all_commits=true&show_icons=true&hide_border=true&title_color=faa627&bg_color=36393f&text_color=ffffffcc&icon_color=ffffff&custom_title=GitHub Stats">
+          <img alt="Github Stats" width="100%" height="auto"
+            src="https://github-readme-stats.vercel.app/api/?username=Newtox&layout=compact&hide_rank=false&count_private=true&include_all_commits=true&show_icons=true&hide_border=true&title_color=1e81b0&bg_color=36393f&text_color=ffffffcc&icon_color=ffffff&custom_title=GitHub Stats">
         </a>
-        <p style="text-align: center;">
+        <p style="text-align: center; font-size: 20px">
           The following graphic is a chart
           <br>
-          of general GitHub statistics,
+          of general GitHub statistics.
           <br>
-          including commits, contributions, and more!
+          including commits, contributions, 
+          <br>
+          and more!
         </p>
       </div>
 
       <div class="section section-2">
         <a href="https://github.com/anuraghazra/github-readme-stats" target="_blank">
-          <img alt="Github Stats" width="80%"
-            src="https://github-readme-stats.vercel.app/api/top-langs/?username=Newtox&layout=compact&show_icons=true&hide_border=true&title_color=faa627&bg_color=36393f&text_color=ffffffcc&icon_color=ffffff&langs_count=10">
+          <img alt="Github Stats" width="100%" height="auto"
+            src="https://github-readme-stats.vercel.app/api/top-langs/?username=Newtox&layout=compact&show_icons=true&hide_border=true&title_color=1e81b0&bg_color=36393f&text_color=ffffffcc&icon_color=ffffff&langs_count=10">
         </a>
-        <p style="text-align: center;">
+        <p style="text-align: center; font-size: 20px;">
           In this chart, you can see the programming languages
           <br>
           I use in my projects the most.
