--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
 
     <nav class="menu">
       <div class="menu-branding">
-        <div class="portrait"></div>
+        <div class="avatar"></div>
       </div>
       <ul class="menu-nav">
         <li class="nav-item">
