✨ added spotify widget

--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
 
       <div class="section section-1">
         <a href="https://github.com/anuraghazra/github-readme-stats" target="_blank">
-          <img alt="Github Stats" width="100%" height="auto"
+          <img alt="Github Stats" width="100%"
             src="https://github-readme-stats.vercel.app/api/?username=Newtox&layout=compact&hide_rank=false&count_private=true&include_all_commits=true&show_icons=true&hide_border=true&title_color=1e81b0&bg_color=36393f&text_color=ffffffcc&icon_color=ffffff&custom_title=GitHub Stats">
         </a>
         <p style="text-align: center; font-size: 20px">
@@ -90,7 +90,7 @@
 
       <div class="section section-2">
         <a href="https://github.com/anuraghazra/github-readme-stats" target="_blank">
-          <img alt="Github Stats" width="100%" height="auto"
+          <img alt="Github Stats" width="100%"
             src="https://github-readme-stats.vercel.app/api/top-langs/?username=Newtox&layout=compact&show_icons=true&hide_border=true&title_color=1e81b0&bg_color=36393f&text_color=ffffffcc&icon_color=ffffff&langs_count=10">
         </a>
         <p style="text-align: center; font-size: 20px;">
@@ -100,11 +100,12 @@
         </p>
       </div>
 
-      <!-- <div class="section section-3">
-        <h3>Header 5</h3>
-        <h6>Header 6</h6>
-        <p>Description 3</p>
-      </div> -->
+      <div class="section section-3">
+        <img alt="Newtox's Spotify" src="https://newtox.vercel.app/api/spotify" width="100%">
+        <p style="text-align: center; font-size: 20px;">
+          In this chart you can see my latest spotify information.
+        </p>
+      </div>
     </div>
   </main>
 
