🩹 hopefully fixed text out of box

--- a/about.html
+++ b/about.html
@@ -101,9 +101,9 @@
       </div>
 
       <div class="section section-3">
-        <img alt="Newtox's Spotify" src="https://newtox.vercel.app/api/spotify" width="100%">
+        <img alt="Newtox's Spotify" src="https://newtox.vercel.app/api/spotify" width="90%">
         <p style="text-align: center; font-size: 20px;">
-          In this chart you can see my latest spotify information.
+          In this chart you can see my latest spotify activity.
         </p>
       </div>
     </div>
