💬 changed meta description and title

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://newtox.github.io">
-  <meta property="og:title" content="Newtox">
-  <meta property="og:description" content="Newtox"s Homepage.">
+  <meta property="og:title" content="Newtox's Homepage">
+  <meta property="og:description" content="Website from Newtox">
   <link rel="stylesheet" href="./css/main.css">
   <title>Welcome To My Website</title>
 </head>
