⚡️ added meta properties

--- a/socials.html
+++ b/socials.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" >
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://newtox.github.io">
+  <meta property="og:title" content="Newtox's Socials">
+  <meta property="og:description" content="Website from Newtox">
   <link rel="stylesheet" href="./css/main.css">
   <title>Socials</title>
 </head>
